2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.man: Cleaned the doc up a bit. Especially highlighted the
	  recently added note recording binary by separating it from the
	  general description a bit (same location, new paragraph).

2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64.man: Added some examples and attempted to point out that
	proper string encoding may be needed for unicode strings.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.tcl: Typo police.
	* uuencode.tcl:
	* uuencode.man:
	* yencode.man:

2004-07-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.man: Polished a bit (options, keywords).
	* yencode.man: 

2004-07-19  Andreas Kupries  <andreask@activestate.com>

	* base64.man: Added copyright notes for the early authors, as far
	  as I am aware of them.

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: Updated version number to sync with 1.6.1
	* uuencode.man: release
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* uuencode.tcl: Rel. engineering. Updated version number 
	* uuencode.man: of uuencode to reflect its changes, to 1.1.1.
	* pkgIndex.tcl:

2004-03-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* uuencode.tcl (::uuencode::pad): don't use log package

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-10-24  Andreas Kupries  <andreask@activestate.com>

	* base64.test:
	* base64.tcl: Applied patch fixing [Bug 821126]. Variable 'output'
	  is now initialized to empty to have it defined at all